@@ -17,7 +17,7 @@
   |          Dmitry Stogov <dmitry@zend.com>                             |
   +----------------------------------------------------------------------+
 */
-/* $Id: php_schema.c,v 1.49.2.6 2005/06/01 14:42:50 dmitry Exp $ */
+/* $Id: php_schema.c,v 1.49.2.7 2005/09/28 11:25:38 dmitry Exp $ */
 
 #include "php_soap.h"
 #include "libxml/uri.h"
@@ -533,10 +533,6 @@ static int schema_union(sdlPtr sdl, xmlAttrPtr tns, xmlNodePtr unionType, sdlTyp
 	while (trav != NULL) {
 		if (node_is_equal(trav,"simpleType")) {
 			sdlTypePtr newType, *tmp;
-
-			if (memberTypes != NULL) {
-				soap_error0(E_ERROR, "Parsing Schema: union has both 'memberTypes' attribute and subtypes");
-			}
 
 			newType = emalloc(sizeof(sdlType));
 			memset(newType, 0, sizeof(sdlType));
